--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,13 +138,26 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_alignStart="@+id/seekArcVol"
-        android:layout_alignTop="@+id/seekArcVol" />
+        android:layout_alignTop="@+id/seekArcVol"
+        android:gravity="center_vertical|center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <TextView
         android:id="@+id/textArm"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_alignStart="@+id/seekArcArm"
-        android:layout_alignTop="@+id/seekArcArm" />
+        android:layout_alignTop="@+id/seekArcArm"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+    <Spinner
+        android:id="@+id/spinnerSounds"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/spinnerInpSel"
+        android:layout_marginTop="36dp"
+        android:entries="@array/sonidos" />
 
 </RelativeLayout>
