--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,16 +15,20 @@
         android:id="@+id/seekBarTono"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true"
+
+        android:layout_above="@+id/seekArcVol"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="8dp"
         android:max="120" />
 
     <ToggleButton
         android:id="@+id/toggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+
+        android:layout_alignStart="@+id/seekRdamp"
+        android:layout_alignTop="@+id/textView7"
+        android:layout_marginStart="31dp"
         android:text="ToggleButton" />
 
     <SeekBar
@@ -32,8 +36,8 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
 
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/toggleButton"
+        android:layout_alignEnd="@+id/textView"
         android:labelFor="@+id/volumen"
         android:max="2000"
         android:progress="150" />
@@ -44,7 +48,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="29dp"
         android:entries="@array/intervalos" />
 
     <CheckBox
@@ -52,17 +55,18 @@
         style="@style/Widget.AppCompat.CompoundButton.CheckBox"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_alignBottom="@+id/seekRtime"
+
         android:layout_alignStart="@+id/seekBarTono"
+        android:layout_below="@+id/textView3"
         android:text="Reverb" />
 
     <Spinner
         android:id="@+id/spinnerInpSel"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/spinnerIntervalos"
-        android:layout_alignBottom="@+id/spinnerIntervalos"
-        android:layout_alignParentEnd="true"
+
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignParentStart="true"
         android:entries="@array/inputselect" />
 
     <Button
@@ -71,7 +75,7 @@
         android:layout_height="wrap_content"
 
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/seekBarTono"
         android:text="Play" />
 
     <SeekBar
@@ -80,9 +84,9 @@
         android:layout_width="150dp"
 
         android:layout_height="wrap_content"
-        android:layout_above="@+id/seekRtime"
+        android:layout_above="@+id/spinnerSounds"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="12dp"
         android:max="100"
         android:progress="80" />
 
@@ -91,8 +95,8 @@
         style="@android:style/Widget.Material.SeekBar"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/rev"
         android:layout_alignParentEnd="true"
+        android:layout_below="@+id/seekRlive"
         android:max="100"
         android:progress="20" />
 
@@ -101,8 +105,8 @@
         style="@android:style/Widget.Material.SeekBar"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/spinnerInpSel"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
         android:max="98"
         android:progress="50" />
 
@@ -110,24 +114,22 @@
         android:id="@+id/seekArcVol"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_alignEnd="@+id/spinnerIntervalos"
-        android:layout_alignTop="@+id/seekArcArm"
+        android:layout_alignStart="@+id/textVol"
+        android:layout_alignTop="@+id/textVol"
         android:layout_gravity="center"
         android:padding="30dp"
         seekarc:rotation="180"
         seekarc:startAngle="30"
         seekarc:sweepAngle="300"
-        seekarc:touchInside="true"
-        />
+        seekarc:touchInside="true" />
 
     <com.triggertrap.seekarc.SeekArc
         android:id="@+id/seekArcArm"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_above="@+id/toggleButton"
-        android:layout_alignStart="@+id/seekRtime"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textArm"
         android:layout_gravity="center"
-        android:layout_marginBottom="12dp"
         android:padding="30dp"
         seekarc:rotation="180"
         seekarc:startAngle="30"
@@ -138,8 +140,9 @@
         android:id="@+id/textVol"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_alignStart="@+id/seekArcVol"
-        android:layout_alignTop="@+id/seekArcVol"
+        android:layout_alignEnd="@+id/spinnerSounds"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="28dp"
         android:gravity="center_vertical|center_horizontal"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -147,8 +150,9 @@
         android:id="@+id/textArm"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_alignStart="@+id/seekArcArm"
-        android:layout_alignTop="@+id/seekArcArm"
+
+        android:layout_alignTop="@+id/textView5"
+        android:layout_toEndOf="@+id/textVol"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -156,9 +160,10 @@
         android:id="@+id/spinnerSounds"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/spinnerInpSel"
-        android:layout_marginTop="36dp"
+
+        android:layout_above="@+id/seekArcVol"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="47dp"
         android:entries="@array/sonidos" />
 
     <TextView
@@ -166,7 +171,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/seekRdamp"
-        android:layout_alignEnd="@+id/seekArcArm"
+        android:layout_alignStart="@+id/textView2"
         android:labelFor="@+id/seekRdamp"
         android:text="Damp" />
 
@@ -175,8 +180,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/seekRlive"
-        android:layout_alignEnd="@+id/seekBarTono"
-        android:layout_marginEnd="7dp"
+        android:layout_alignStart="@+id/seekRlive"
+        android:layout_marginStart="43dp"
         android:labelFor="@+id/seekRlive"
         android:text="Liveness" />
 
@@ -184,8 +189,9 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/seekRtime"
-        android:layout_alignEnd="@+id/textView"
+        android:layout_alignBottom="@+id/spinnerIntervalos"
+        android:layout_alignStart="@+id/textView2"
+        android:layout_marginStart="9dp"
         android:labelFor="@+id/seekRtime"
         android:text="Time" />
 
@@ -193,8 +199,9 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/seekRtime"
-        android:layout_centerHorizontal="true"
+
+        android:layout_above="@+id/seekBarTono"
+        android:layout_toEndOf="@+id/playSample"
         android:labelFor="@+id/seekBarTono"
         android:text="Tone" />
 
@@ -202,8 +209,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/seekBarTono"
-        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/seekBarDelay"
+        android:layout_alignEnd="@+id/textView4"
         android:labelFor="@+id/seekBarDelay"
         android:text="Delay" />
 
